Evolution de la connexion avec Google.
